tests/NormalTests/paczka1/fuzzy1/75519593.err
Error in line 1: 0CQApl S526 63,8
Error in line 12: A333 S526 152,4
Error in line 24: mUtun A731 50,6
Error in line 35: 0CQApl A731 241,2
